added search input and me-auto to auto expand

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a href="/" class="nav-link active">Home</a>
           </li>
@@ -32,6 +32,9 @@
             <a href="#" class="nav-link">Contact</a>
           </li>
         </ul>
+        <form>
+          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        </form>
       </div>
     </nav>
   </header>
@@ -95,7 +98,7 @@
                   condimentum mattis rhoncus.
                 </p>
                 <div>
-                  SHARE 
+                  SHARE
                   <i class="lni lni-facebook-filled"></i>
                   <i class="lni lni-twitter-filled"></i>
                 </div>
@@ -124,7 +127,7 @@
                   condimentum mattis rhoncus.
                 </p>
                 <div>
-                  SHARE 
+                  SHARE
                   <i class="lni lni-facebook-filled"></i>
                   <i class="lni lni-twitter-filled"></i>
                 </div>
@@ -153,7 +156,7 @@
                   condimentum mattis rhoncus.
                 </p>
                 <div>
-                  SHARE 
+                  SHARE
                   <i class="lni lni-facebook-filled"></i>
                   <i class="lni lni-twitter-filled"></i>
                 </div>
@@ -165,9 +168,9 @@
   </main>
 
   <footer class="row footer">
-    <div class="col-sm text-center text-sm-left ">      
-      <i class="lni lni-vimeo">
-      <i class="lni lni-youtube">
+    <div class="col-sm text-center text-sm-left">
+      <i class="lni lni-vimeo"></i>
+      <i class="lni lni-youtube"></i>
     </div>
     <div class="col-sm text-center text-sm-right">
       hello@yay.com
