--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="mx-auto  mt-2 mb-2">
     <nav class="navbar navbar-expand-sm navbar-light">
       <a class="navbar-brand" href="/">The YAY Company</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
@@ -23,17 +23,18 @@
       <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a href="/" class="nav-link active">Home</a>
+            <a href="/" class="nav-link active px-4">Home</a>
           </li>
-          <li>
-            <a href="#" class="nav-link">News</a>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-4">News</a>
           </li>
-          <li>
-            <a href="#" class="nav-link">Contact</a>
+          <li class="nav-item">
+            <a href="#" class="nav-link px-4">Contact</a>
           </li>
         </ul>
-        <form>
+        <form class="mt-4 mb-2">
           <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-primary" type="submit">Go</button>
         </form>
       </div>
     </nav>
@@ -61,13 +62,15 @@
       </div>
     </div>
 
-    <h1>We do YAY things</h1>
-    <p>
-      Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam
-      vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur
-      faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci,
-      sollicitudin in luctus a, varius eget massa.
-    </p>
+    <div class="m-2">
+      <h1>We do YAY things</h1>
+      <p>
+        Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam
+        vel enim id mauris eleifend finibus et ac orci. Aliquam metus massa, aliquam quis arcu sit amet, consectetur
+        faucibus urna. Suspendisse massa diam, efficitur eu massa euismod, pretium lacinia magna. Donec mi orci,
+        sollicitudin in luctus a, varius eget massa.
+      </p>
+    </div>
 
 
     <div class="nav nav-tabs" id="nav-tab" role="tablist">
