fixed header alignment and main top

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header class="mx-auto  mt-2 mb-2">
-    <nav class="navbar navbar-expand-sm navbar-light">
+    <nav class="navbar navbar-expand-md navbar-light">
       <a class="navbar-brand" href="/">The YAY Company</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
         aria-expanded="false" aria-controls="navbar">
@@ -32,8 +32,8 @@
             <a href="#" class="nav-link px-4">Contact</a>
           </li>
         </ul>
-        <form class="mt-4 mb-2">
-          <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+        <form class="mt-md-0 mb-md-0 mt-4 mb-2">
+          <input class="form-control align-middle" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-primary" type="submit">Go</button>
         </form>
       </div>
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="m-2">
+    <div class="my-5 px-5">
       <h1>We do YAY things</h1>
       <p>
         Nam tincidunt, sapien nec congue porta, tellus risus ullamcorper mi, a rutrum justo eros pretium libero. Nullam
