--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS-Frameworks Georgios Katsanakis</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
   <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -72,96 +70,97 @@
       </p>
     </div>
 
-
-    <div class="nav nav-tabs" id="nav-tab" role="tablist">
-      <button class="nav-link active" id="nav-first-tab" data-bs-toggle="tab" data-bs-target="#nav-first" type="button"
-        role="tab" aria-controls="nav-first" aria-selected="true">First</button>
-      <button class="nav-link" id="nav-second-tab" data-bs-toggle="tab" data-bs-target="#nav-second" type="button"
-        role="tab" aria-controls="nav-second" aria-selected="false">Second</button>
-      <button class="nav-link" id="nav-third-tab" data-bs-toggle="tab" data-bs-target="#nav-third" type="button"
-        role="tab" aria-controls="nav-third" aria-selected="false">Third</button>
-    </div>
-    <div class="tab-content accordion" id="nav-tabContent">
-      <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingFirst">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFirst"
-              aria-expanded="true" aria-controls="collapseFirst">
-              First
-            </button>
-          </h2>
-          <div id="collapseFirst" class="accordion-collapse collapse show" aria-labelledby="headingFirst"
-            data-bs-parent="#nav-tabContent">
-            <div class="accordion-body">
-              <img src="images/tab/tab-1.jpg" alt="first tab image">
-              <div>
-                <p>
-                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                  condimentum mattis rhoncus.
-                </p>
+    <div class="px-5">
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <button class="nav-link active" id="nav-first-tab" data-bs-toggle="tab" data-bs-target="#nav-first"
+          type="button" role="tab" aria-controls="nav-first" aria-selected="true">First</button>
+        <button class="nav-link" id="nav-second-tab" data-bs-toggle="tab" data-bs-target="#nav-second" type="button"
+          role="tab" aria-controls="nav-second" aria-selected="false">Second</button>
+        <button class="nav-link" id="nav-third-tab" data-bs-toggle="tab" data-bs-target="#nav-third" type="button"
+          role="tab" aria-controls="nav-third" aria-selected="false">Third</button>
+      </div>
+      <div class="tab-content accordion " id="nav-tabContent">
+        <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab">
+          <div class="accordion-item rounded-top-25">
+            <h2 class="accordion-header" id="headingFirst">
+              <button class="accordion-button rounded-top-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFirst"
+                aria-expanded="true" aria-controls="collapseFirst">
+                First
+              </button>
+            </h2>
+            <div id="collapseFirst" class="accordion-collapse collapse show" aria-labelledby="headingFirst"
+              data-bs-parent="#nav-tabContent">
+              <div class="accordion-body">
+                <img src="images/tab/tab-1.jpg" alt="first tab image">
                 <div>
-                  SHARE
-                  <i class="lni lni-facebook-filled"></i>
-                  <i class="lni lni-twitter-filled"></i>
+                  <p>
+                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                    condimentum mattis rhoncus.
+                  </p>
+                  <div>
+                    SHARE
+                    <i class="lni lni-facebook-filled"></i>
+                    <i class="lni lni-twitter-filled"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="tab-pane fade" id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingSecond">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseSecond" aria-expanded="false" aria-controls="collapseSecond">
-              Second
-            </button>
-          </h2>
-          <div id="collapseSecond" class="accordion-collapse collapse" aria-labelledby="headingSecond"
-            data-bs-parent="#nav-tabContent">
-            <div class="accordion-body">
-              <img src="images/tab/tab-2.jpg" alt="first tab image">
-              <div>
-                <p>
-                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                  condimentum mattis rhoncus.
-                </p>
+        <div class="tab-pane fade" id="nav-second" role="tabpanel" aria-labelledby="nav-second-tab">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingSecond">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseSecond" aria-expanded="false" aria-controls="collapseSecond">
+                Second
+              </button>
+            </h2>
+            <div id="collapseSecond" class="accordion-collapse collapse" aria-labelledby="headingSecond"
+              data-bs-parent="#nav-tabContent">
+              <div class="accordion-body">
+                <img src="images/tab/tab-2.jpg" alt="first tab image">
                 <div>
-                  SHARE
-                  <i class="lni lni-facebook-filled"></i>
-                  <i class="lni lni-twitter-filled"></i>
+                  <p>
+                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                    condimentum mattis rhoncus.
+                  </p>
+                  <div>
+                    SHARE
+                    <i class="lni lni-facebook-filled"></i>
+                    <i class="lni lni-twitter-filled"></i>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="tab-pane fade" id="nav-third" role="tabpanel" aria-labelledby="nav-third-tab">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="headingThird">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#collapseThird" aria-expanded="false" aria-controls="collapseThird">
-              Third
-            </button>
-          </h2>
-          <div id="collapseThird" class="accordion-collapse collapse" aria-labelledby="headingThird"
-            data-bs-parent="#nav-tabContent">
-            <div class="accordion-body">
-              <img src="images/tab/tab-3.jpg" alt="first tab image">
-              <div>
-                <p>
-                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                  condimentum mattis rhoncus.
-                </p>
+        <div class="tab-pane fade" id="nav-third" role="tabpanel" aria-labelledby="nav-third-tab">
+          <div class="accordion-item rounded-bottom-25">
+            <h2 class="accordion-header" id="headingThird">
+              <button class="accordion-button collapsed rounded-bottom-25 " type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseThird" aria-expanded="false" aria-controls="collapseThird">
+                Third
+              </button>
+            </h2>
+            <div id="collapseThird" class="accordion-collapse collapse" aria-labelledby="headingThird"
+              data-bs-parent="#nav-tabContent">
+              <div class="accordion-body">
+                <img src="images/tab/tab-3.jpg" alt="first tab image">
                 <div>
-                  SHARE
-                  <i class="lni lni-facebook-filled"></i>
-                  <i class="lni lni-twitter-filled"></i>
+                  <p>
+                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                    condimentum mattis rhoncus.
+                  </p>
+                  <div>
+                    SHARE
+                    <i class="lni lni-facebook-filled"></i>
+                    <i class="lni lni-twitter-filled"></i>
+                  </div>
                 </div>
               </div>
             </div>
