finished home mobile

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab">
           <div class="accordion-item rounded-top-25">
             <h2 class="accordion-header" id="headingFirst">
-              <button class="accordion-button rounded-top-25" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFirst"
-                aria-expanded="true" aria-controls="collapseFirst">
+              <button class="accordion-button rounded-top-25" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapseFirst" aria-expanded="true" aria-controls="collapseFirst">
                 First
               </button>
             </h2>
@@ -92,17 +92,15 @@
               data-bs-parent="#nav-tabContent">
               <div class="accordion-body">
                 <img src="images/tab/tab-1.jpg" alt="first tab image">
+                <p class="accordion-text">
+                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                  condimentum mattis rhoncus.
+                </p>
                 <div>
-                  <p>
-                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                    condimentum mattis rhoncus.
-                  </p>
-                  <div>
-                    SHARE
-                    <i class="lni lni-facebook-filled"></i>
-                    <i class="lni lni-twitter-filled"></i>
-                  </div>
+                  SHARE
+                  <i class="lni lni-facebook-filled"></i>
+                  <i class="lni lni-twitter-filled"></i>
                 </div>
               </div>
             </div>
@@ -121,17 +119,15 @@
               data-bs-parent="#nav-tabContent">
               <div class="accordion-body">
                 <img src="images/tab/tab-2.jpg" alt="first tab image">
+                <p class="accordion-text">
+                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                  condimentum mattis rhoncus.
+                </p>
                 <div>
-                  <p>
-                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                    condimentum mattis rhoncus.
-                  </p>
-                  <div>
-                    SHARE
-                    <i class="lni lni-facebook-filled"></i>
-                    <i class="lni lni-twitter-filled"></i>
-                  </div>
+                  SHARE
+                  <i class="lni lni-facebook-filled"></i>
+                  <i class="lni lni-twitter-filled"></i>
                 </div>
               </div>
             </div>
@@ -149,18 +145,16 @@
             <div id="collapseThird" class="accordion-collapse collapse" aria-labelledby="headingThird"
               data-bs-parent="#nav-tabContent">
               <div class="accordion-body">
-                <img src="images/tab/tab-3.jpg" alt="first tab image">
+                <img src="images/tab/tab-1.jpg" alt="first tab image">
+                <p class="accordion-text">
+                  Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
+                  Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
+                  condimentum mattis rhoncus.
+                </p>
                 <div>
-                  <p>
-                    Morbi eget efficitur turpis. Vivamus pellentesque tortor massa, venenatis pharetra leo laoreet a.
-                    Nullam non eleifend justo, a ullamcorper turpis. Cras vehicula pharetra lectus non maximus. Sed
-                    condimentum mattis rhoncus.
-                  </p>
-                  <div>
-                    SHARE
-                    <i class="lni lni-facebook-filled"></i>
-                    <i class="lni lni-twitter-filled"></i>
-                  </div>
+                  SHARE
+                  <i class="lni lni-facebook-filled"></i>
+                  <i class="lni lni-twitter-filled"></i>
                 </div>
               </div>
             </div>
@@ -170,11 +164,11 @@
   </main>
 
   <footer class="row footer">
-    <div class="col-sm text-center text-sm-left">
+    <div class="col-md text-center text-md-left">
       <i class="lni lni-vimeo"></i>
       <i class="lni lni-youtube"></i>
     </div>
-    <div class="col-sm text-center text-sm-right">
+    <div class="col-md text-center text-md-right">
       hello@yay.com
       Copyright &copy 2020;
     </div>
