finished home page

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
       </div>
       <div class="tab-content accordion " id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-first" role="tabpanel" aria-labelledby="nav-first-tab">
-          <div class="accordion-item rounded-top-25">
+          <div class="accordion-item">
             <h2 class="accordion-header" id="headingFirst">
-              <button class="accordion-button rounded-top-25" type="button" data-bs-toggle="collapse"
+              <button class="accordion-button" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseFirst" aria-expanded="true" aria-controls="collapseFirst">
                 First
               </button>
@@ -164,13 +164,13 @@
   </main>
 
   <footer class="row footer">
-    <div class="col-md text-center text-md-left">
+    <div class="col-md text-center text-md-start">
       <i class="lni lni-vimeo"></i>
       <i class="lni lni-youtube"></i>
     </div>
     <div class="col-md text-center text-md-right">
-      hello@yay.com
-      Copyright &copy 2020;
+      <p>hello@yay.com</p>
+      <p>Copyright &copy 2021</p>
     </div>
   </footer>
 
