--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS-Frameworks Georgios Katsanakis</title>
+  <title>Home | CSS-Frameworks Georgios Katsanakis</title>
   <link href="https://cdn.lineicons.com/3.0/lineicons.css" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -24,10 +24,10 @@
             <a href="/" class="nav-link active px-4">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link px-4">News</a>
+            <a href="/news.html" class="nav-link px-4">News</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link px-4">Contact</a>
+            <a href="/contact.html" class="nav-link px-4">Contact</a>
           </li>
         </ul>
         <form class="mt-md-0 mb-md-0 mt-4 mb-2">
