Fixed some m p and colors

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <header class="mx-auto  mt-2 mb-2">
+  <header class="mx-auto mb-5 px-5 pt-3 pb-2">
     <nav class="navbar navbar-expand-md navbar-light">
       <a class="navbar-brand" href="/">The YAY Company</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
@@ -47,7 +47,8 @@
           <div class="col-1">
             <img src="icons/envelope.png" alt="email">
           </div>
-          <div class="col-10">
+          <div class="col-1"></div>
+          <div class="col-10 col-md-6">
             hello@yay.com
           </div>
         </div>
@@ -55,7 +56,8 @@
           <div class="col-1">
             <img src="icons/phone.png" alt="phone">
           </div>
-          <div class="col-10">
+          <div class="col-1"></div>
+          <div class="col-10 col-md-6">
             123 456 7890
           </div>
         </div>
@@ -63,7 +65,8 @@
           <div class="col-1">
             <img src="icons/marker.png" alt="address">
           </div>
-          <div class="col-10">
+          <div class="col-1"></div>
+          <div class="col-10 col-md-6">
             123 Some street<br>
             Somewhere <br>
             Some City <br>
