--- a/news.html
+++ b/news.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <header class="mx-auto  mt-2 mb-2">
+  <header class="mx-auto mb-5 px-5 pt-3 pb-2">
     <nav class="navbar navbar-expand-md navbar-light">
       <a class="navbar-brand" href="/">The YAY Company</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
