--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,8 @@
           </div>          
           <div class="form-group w-100">
             <label for="website" class="form-label">Website</label>
-            <div>
-              <span class="input-group-text w-auto" id="website-extra">https://</span>
+            <div class="input-group">
+              <span class="input-group-text" id="website-extra">https://</span>
               <input type="website" class="form-control" id="website" name="website">
             </div>
           </div>     
@@ -97,7 +97,7 @@
             <textarea class="form-control" id="message" name="message" rows="5"></textarea>
           </div>
           <div class="form-check m-3">
-            <input class="form-check-input" type="checkbox" name="terms" id="terms" checked>
+            <input class="form-check-input" type="checkbox" name="terms" id="terms">
             <label class="form-check-label" for="terms">Allow us to sell your personal details
               to whomever we want</label>
           </div>
