--- a/news.html
+++ b/news.html
@@ -38,10 +38,10 @@
     </nav>
   </header>
 
-  <main class="row d-flex">
+  <main class="row d-flex mb-2">
 
 
-    <div class="my-5 px-5">
+    <div class="mt-2 mb-3 px-5">
       <h1>News</h1>
       <nav arial-label="pagination">
         <ul class="pagination pagination-lg">
@@ -128,7 +128,7 @@
       </div>
     </div>
 
-    <div class="my-5 px-5">
+    <div class="mb-5 mt-2 px-5">
       <nav arial-label="pagination">
         <ul class="pagination pagination-lg">
           <li class="page-item active" aria-current="page">
