--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
             <a href="/" class="nav-link px-4">Home</a>
           </li>
           <li class="nav-item">
-            <a href="/news.html" class="nav-link active px-4">News</a>
+            <a href="/news.html" class="nav-link px-4">News</a>
           </li>
           <li class="nav-item">
-            <a href="/contact.html" class="nav-link px-4">Contact</a>
+            <a href="/contact.html" class="nav-link active px-4">Contact</a>
           </li>
         </ul>
         <form class="mt-md-0 mb-md-0 mt-4 mb-2">
